Gallery clipping with navbar fixed

--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -31,6 +31,13 @@
   justify-content: center;
 }
 
+.nav-cover {
+  position: fixed;
+  height: 10vh;
+  width: 100vw;
+  background-color: #181818;
+}
+
 .img-container {
   height: 20vw;
   width: 20vw;
